--- a/src/LaneKeepingSystem/config/config.yaml
+++ b/src/LaneKeepingSystem/config/config.yaml
@@ -1,6 +1,28 @@
 IMAGE:
   WIDTH: 640
   HEIGHT: 480
+  MINTHRES: 150
+  MAXTHRES: 255
+
+  SRCPT_X0: 100
+  SRCPT_X1: 500
+  SRCPT_X2: 560
+  SRCPT_X3: 30
+  SRCPT_Y0: 350
+  SRCPT_Y1: 350
+  SRCPT_Y2: 390
+  SRCPT_Y3: 390
+  
+  DSTPT_X0: 0
+  DSTPT_X1: 479
+  DSTPT_X2: 479
+  DSTPT_X3: 0
+  DSTPT_Y0: 0
+  DSTPT_Y1: 0
+  DSTPT_Y2: 639
+  DSTPT_Y3: 639
+
+  BLURSIGMA: 1.0
   # find your ROI parameter.
 
 XYCAR:
