--- a/src/LaneKeepingSystem/config/config.yaml
+++ b/src/LaneKeepingSystem/config/config.yaml
@@ -27,9 +27,9 @@ IMAGE:
 
 XYCAR:
   START_SPEED: 8.0
-  MAX_SPEED: 10.0
-  MIN_SPEED: 4.0
-  SPEED_CONTROL_THRESHOLD: 30.0
+  MAX_SPEED: 10.0 #12
+  MIN_SPEED: 4.0 #7
+  SPEED_CONTROL_THRESHOLD: 30.0 #40
   ACCELERATION_STEP: 0.50
   DECELERATION_STEP: 0.5
   # find your parameter.
